added changes to the homepage style

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   background-color: #9dc3fb;
 }
@@ -6,21 +12,138 @@ body {
   background-color: #9dc3fb;
   overflow-x: hidden;
   font-size: 16px;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  max-width: 1400px;
+  font-family: Arial, Helvetica, sans-serif;
+  max-width: 1100px;
   margin: 0 auto;
+  line-height: 1.3;
 }
+
 a {
   text-decoration: none;
   color: black;
   font-size: 1.2rem;
-  font-weight: 500;
+  font-weight: 700;
 }
 
 a:hover {
   color: rgba(0, 0, 0, 0.566);
 }
 
+p {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+img {
+  width: 100%;
+}
+/* homepage */
+.about {
+  padding: 0 10px;
+}
+.header {
+  height: 60vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.header h1 {
+  font-size: 4rem;
+}
+
+.header p {
+  font-size: 2rem;
+  margin-top: 0.7rem;
+}
+
+.header svg {
+  margin-top: 2rem;
+}
+
+.header .viewMap {
+  text-align: center;
+  font-weight: 100;
+  font-size: 1rem;
+  cursor: pointer;
+  margin-top: 1.7rem;
+  width: 10rem;
+  background: rgb(31, 31, 31);
+  color: white;
+  border: none;
+  border-radius: 1.3rem;
+  padding: 0.7rem;
+}
+
+.viewMap:hover {
+  background: rgba(31, 31, 31, 0.838);
+  color: rgba(255, 255, 255, 0.785);
+}
+
+.guide h2 {
+  font-size: 1.5rem;
+  color: black;
+}
+
+.guide p {
+  font-size: 1.2rem;
+  color: rgb(0, 0, 0);
+  margin-top: 0.8rem;
+}
+
+.italicized {
+  font-style: italic;
+  font-weight: 500;
+}
+
+.aboutMe {
+  margin-top: 4rem;
+}
+
+.dp {
+  max-width: 15rem;
+  border-color: white;
+  border-style: solid;
+  border-radius: 10px;
+  float: left;
+  margin-right: 10px;
+}
+
+.details {
+  display: flex;
+  margin-top: 2rem;
+  justify-content: space-around;
+}
+.details p {
+  word-wrap: break-word;
+  white-space: pre-wrap;
+  word-break: break-word;
+}
+
+.text-details {
+  font-size: 1.1rem;
+  text-align: justify;
+  width: 40rem;
+}
+
+.socials {
+  margin-top: 1.4rem;
+  cursor: pointer;
+}
+
+.socials svg {
+  margin-right: 1rem;
+}
+
+.reminder {
+  margin-top: 1rem;
+  font-style: italic;
+}
+
+.flag-counter {
+  max-width: 500px;
+  margin: 5rem auto;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -127,14 +250,7 @@ a:hover {
   height: 64px;
   background-color: transparent;
   align-items: center;
-  padding: 10px 40px;
-}
-
-.about {
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-bottom: 20px;
-  height: 100h;
+  padding: 10px;
 }
 
 .link:hover {
@@ -142,6 +258,8 @@ a:hover {
 }
 
 .link {
+  font-size: 2rem;
+  font-weight: 500;
   color: blue;
   display: inline;
 }
@@ -150,21 +268,47 @@ a:hover {
   font-size: 12px;
 }
 
-.dp {
-  width: 100px;
-  border-color: white;
-  border-style: solid;
-  border-radius: 10px;
-  float: left;
-  margin-right: 10px;
-}
-
 .flag-counter {
   text-align: center;
 }
 
 .bullet {
-  list-style-type: circle;
+  list-style: none;
+  padding-left: 1.5em;
+  line-height: 1.5;
+}
+
+.bullet::before {
+  content: "";
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-color: black;
+  margin-right: 5px;
+}
+
+ul li:nth-child(6)::before {
+  background-color: rgb(255, 255, 255);
+}
+ul li:nth-child(5)::before {
+  background-color: rgb(53, 152, 219);
+}
+ul li:nth-child(4)::before {
+  background-color: rgb(48, 204, 112);
+}
+ul li:nth-child(3)::before {
+  background-color: rgb(243, 194, 24);
+}
+ul li:nth-child(2)::before {
+  background-color: rgb(213, 131, 55);
+}
+ul li:nth-child(1)::before {
+  background-color: rgb(232, 76, 61);
+}
+
+.trivia {
+  font-style: italic;
+  font-weight: 500;
 }
 
 .map-tooltip {
@@ -191,5 +335,61 @@ a:hover {
   }
   to {
     transform: rotate(360deg);
+  }
+}
+/* For small screens */
+@media (max-width: 768px) {
+  .header h1 {
+    font-size: 4rem;
+  }
+
+  .header p,
+  .header a {
+    font-size: 1.5rem;
+  }
+}
+@media (max-width: 600px) {
+  .details {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .text-details {
+    display: flex;
+    width: 100%;
+    margin-top: 2rem;
+    flex-direction: column;
+  }
+
+  .socials {
+    align-self: center;
+  }
+}
+@media (max-width: 400px) {
+  .header h1 {
+    font-size: 2rem;
+  }
+
+  p {
+    font-size: 1rem;
+  }
+  .guide {
+    margin-top: 2rem;
+  }
+}
+
+@media (max-width: 230px) {
+  .header h1 {
+    font-size: 1.7rem;
+  }
+  .header p,
+  .header a {
+    font-size: 1.1rem;
+  }
+
+  .header .viewMap {
+    font-size: 0.6rem;
+    margin-top: 0;
+    width: 8rem;
   }
 }
