--- a/src/App.css
+++ b/src/App.css
@@ -193,6 +193,16 @@ height: 100h;
   filter: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
 }
 
+.donate {
+  text-align: center;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.donate-button {
+  text-align: center;
+}
+
 
 @keyframes App-logo-spin {
   from {
