--- a/src/App.css
+++ b/src/App.css
@@ -128,12 +128,28 @@ svg#svg574 .province-layer path:hover {
   justify-content: center;
   left: 50%;
   margin-left: -50px;
+  margin-bottom: 10px;
+  padding: 3px;
+}
+
+.save-image-button:hover {
+  cursor: pointer;
+  background-color: lightgray;
+}
+
+.share-fb-button {
+  color: white;
+  background: #4267b3;
   margin-bottom: 20px;
 }
 
-.save-image-button:hover, .share-fb-button:hover {
+.share-fb-button:hover {
   cursor: pointer;
-  background-color: lightgray;
+  background-color: #2d487d;
+}
+
+.share-fb-button svg {
+  margin-right: 4px;
 }
 
 .about {
